--- a/index.html
+++ b/index.html
@@ -456,6 +456,23 @@ body.bedtime .spell-fill-input.wrong { background: #3a1a1a; border-color: #8a4a4
 body.bedtime .spell-round-label.round-mc { background: #2a1a4a; color: #c090e0; }
 body.bedtime .spell-round-label.round-fill { background: #3a2a1a; color: #e0b060; }
 
+/* ── Spelling Quiz (Full Test) ── */
+.quiz-word-num { font-family: 'Fredoka', sans-serif; font-size: 1.1rem; font-weight: 700; color: var(--muted); margin-bottom: 4px; }
+.quiz-input-wrap { text-align: center; margin: 20px 0; }
+.quiz-input { font-family: 'Fredoka', sans-serif; font-size: 1.6rem; font-weight: 700; text-align: center; padding: 16px 20px; border: 3px solid var(--border); border-radius: 16px; background: var(--section); color: var(--ink); width: 100%; max-width: 340px; outline: none; transition: border-color 0.2s; letter-spacing: 2px; }
+.quiz-input:focus { border-color: var(--purple); }
+.quiz-input.correct { border-color: var(--green); background: #EFFFF4; color: #1B7A3E; }
+.quiz-input.wrong { border-color: var(--coral); background: #FFF0F0; color: #e74c3c; }
+.quiz-correction { font-family: 'Fredoka', sans-serif; font-size: 1.3rem; font-weight: 700; color: var(--green); margin-top: 8px; }
+.quiz-btn-row { display: flex; gap: 10px; justify-content: center; margin-top: 14px; }
+.quiz-countdown { font-family: 'Fredoka', sans-serif; font-size: 5rem; color: var(--purple); text-align: center; animation: quizPulse 0.6s ease; }
+@keyframes quizPulse { 0% { transform: scale(0.5); opacity: 0; } 50% { transform: scale(1.2); } 100% { transform: scale(1); opacity: 1; } }
+body.bedtime .quiz-input { background: #2a2a48; border-color: #3a3a5c; color: #d0c8e8; }
+body.bedtime .quiz-input:focus { border-color: #7a4aaa; }
+body.bedtime .quiz-input.correct { background: #1a3a2a; border-color: #4a8a5a; color: #8adca0; }
+body.bedtime .quiz-input.wrong { background: #3a1a1a; border-color: #8a4a4a; color: #e8a0a0; }
+body.bedtime .quiz-correction { color: #8adca0; }
+
 /* ── Dictionary Popup ── */
 .dict-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 200; display: flex; align-items: flex-end; justify-content: center; animation: fadeIn 0.2s ease; }
 @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
@@ -882,9 +899,10 @@ body.bedtime .wpm-improvement { background: #1a3a2a; border-color: #4a8a5a; colo
         <p style="font-weight:700;color:var(--muted);font-size:0.82rem;margin-top:6px;">This takes just a moment ✨</p>
       </div>
       <div class="spelling-actions" id="spelling-actions" style="display:none;">
-        <button class="btn-main" id="btn-spelling-new" style="font-size:0.95rem;background:linear-gradient(135deg, #FF8C42, #FF6B6B);">📸 New List</button>
-        <button class="btn-main btn-purple" id="btn-spelling-practice" style="font-size:0.95rem;">🎯 Practice</button>
-        <button class="btn-main btn-green" id="btn-spelling-done" style="font-size:0.95rem;">✅ Done</button>
+        <button class="btn-main" id="btn-spelling-new" style="font-size:0.85rem;background:linear-gradient(135deg, #FF8C42, #FF6B6B);">📸 New</button>
+        <button class="btn-main btn-purple" id="btn-spelling-practice" style="font-size:0.85rem;">🎯 Practice</button>
+        <button class="btn-main btn-coral" id="btn-spelling-quiz" style="font-size:0.85rem;">📝 Quiz</button>
+        <button class="btn-main btn-green" id="btn-spelling-done" style="font-size:0.85rem;">✅ Done</button>
       </div>
     </div>
   </div>
@@ -948,6 +966,55 @@ body.bedtime .wpm-improvement { background: #1a3a2a; border-color: #4a8a5a; colo
       <button class="btn-main btn-purple" id="btn-spell-retry-missed" style="font-size:1rem;margin-top:12px;display:none;">🔄 Practice Missed Words</button>
       <button class="btn-main btn-green" id="btn-spell-retry-all" style="font-size:1rem;margin-top:10px;">🎯 Practice Again</button>
       <button class="btn-main btn-outline" id="btn-spell-results-done" style="margin-top:10px;font-size:0.9rem;">← Back to Words</button>
+    </div>
+  </div>
+
+  <!-- SCREEN: Quiz Countdown -->
+  <div class="screen" id="screen-quiz-countdown">
+    <div class="card" style="text-align:center;padding:40px 20px;">
+      <div class="card-title">📝 Spelling Quiz</div>
+      <p style="color:var(--muted);font-weight:700;font-size:0.95rem;margin-bottom:24px;">Get ready to spell!</p>
+      <div class="quiz-countdown" id="quiz-countdown-num">3</div>
+    </div>
+  </div>
+
+  <!-- SCREEN: Quiz (Full Spelling Test) -->
+  <div class="screen" id="screen-quiz">
+    <div class="card">
+      <div class="card-title">📝 Spelling Quiz</div>
+      <div class="spell-practice-progress">
+        <div class="spell-practice-label" id="quiz-progress-label">1 / 5</div>
+        <div class="spell-practice-bar-wrap"><div class="spell-practice-bar" id="quiz-progress-bar" style="width:0%"></div></div>
+      </div>
+      <div class="spell-practice-prompt">
+        <div class="spell-practice-hear" id="quiz-hear" title="Tap to hear the word again">🔊</div>
+        <div class="spell-practice-hint" id="quiz-hint">Listen to the word, then spell it!</div>
+      </div>
+      <div class="quiz-input-wrap">
+        <input type="text" class="quiz-input" id="quiz-input" placeholder="Type the word..." autocomplete="off" autocapitalize="off" spellcheck="false">
+        <div class="quiz-correction" id="quiz-correction" style="display:none;"></div>
+      </div>
+      <div class="quiz-btn-row">
+        <button class="btn-main btn-green" id="btn-quiz-submit" style="font-size:1.05rem;width:auto;padding:14px 36px;">Submit ✓</button>
+        <button class="btn-main btn-outline" id="btn-quiz-replay" style="font-size:0.95rem;width:auto;padding:14px 24px;">🔊 Repeat</button>
+      </div>
+      <div class="spell-practice-feedback" id="quiz-feedback"></div>
+    </div>
+  </div>
+
+  <!-- SCREEN: Quiz Results -->
+  <div class="screen" id="screen-quiz-results">
+    <div class="card" style="text-align:center;">
+      <div class="card-title" id="quiz-results-title">📝 Quiz Complete!</div>
+      <div class="spell-practice-result">
+        <div class="spell-practice-score" id="quiz-results-score">0/0</div>
+        <div class="spell-practice-score-label">words correct</div>
+        <div class="spell-practice-stars" id="quiz-results-stars"></div>
+      </div>
+      <div class="spell-result-list" id="quiz-results-list" style="max-height:40vh;overflow-y:auto;overscroll-behavior:contain;"></div>
+      <button class="btn-main btn-coral" id="btn-quiz-retry-missed" style="font-size:1rem;margin-top:12px;display:none;">🔄 Retry Missed Words</button>
+      <button class="btn-main btn-green" id="btn-quiz-retry-all" style="font-size:1rem;margin-top:10px;">📝 Quiz Again</button>
+      <button class="btn-main btn-outline" id="btn-quiz-results-done" style="margin-top:10px;font-size:0.9rem;">← Back to Words</button>
     </div>
   </div>
 
@@ -2779,6 +2846,14 @@ function openSpellingPicker() {
   const listEl = document.getElementById('spell-picker-list');
   listEl.innerHTML = '';
 
+  // Update picker title based on mode
+  const pickerTitle = document.querySelector('#screen-spell-picker .card-title');
+  if (spellingPracticeMode === 'quiz') {
+    pickerTitle.textContent = '📝 Which words do you want to be quizzed on?';
+  } else {
+    pickerTitle.textContent = '🎯 Which words do you want to practice?';
+  }
+
   currentSpellingList.words.forEach((w, idx) => {
     const row = document.createElement('div');
     row.className = 'spell-picker-word';
@@ -2849,7 +2924,12 @@ document.getElementById('btn-spell-picker-back').addEventListener('click', () =>
 
 document.getElementById('btn-spell-picker-go').addEventListener('click', () => {
   if (spellingPickedWords.length < 1) return;
-  startSpellingPractice(spellingPickedWords.map(i => currentSpellingList.words[i]));
+  const selectedWords = spellingPickedWords.map(i => currentSpellingList.words[i]);
+  if (spellingPracticeMode === 'quiz') {
+    startSpellingQuiz(selectedWords);
+  } else {
+    startSpellingPractice(selectedWords);
+  }
 });
 
 // ── Spelling Practice Engine (2 Rounds: MC + Fill) ──────
@@ -3339,7 +3419,215 @@ document.getElementById('btn-spell-retry-all').addEventListener('click', () => {
 
 document.getElementById('btn-spell-results-done').addEventListener('click', () => {
   show('screen-spelling');
-  // Refresh the word list to show updated practice counts
+  if (currentSpellingList) renderSpellingWords(currentSpellingList);
+});
+
+// ── Spelling Quiz (Full Test Mode) ──────────────────────
+let quizWords = [];
+let quizIndex = 0;
+let quizResults = [];
+let quizAnswered = false;
+
+document.getElementById('btn-spelling-quiz').addEventListener('click', () => {
+  if (!currentSpellingList || !currentSpellingList.words.length) return;
+  spellingPracticeMode = 'quiz';
+  openSpellingPicker();
+});
+
+function startSpellingQuiz(words) {
+  quizWords = shuffleArray([...words]);
+  quizIndex = 0;
+  quizResults = [];
+
+  // Show 3-2-1 countdown
+  show('screen-quiz-countdown');
+  let count = 3;
+  document.getElementById('quiz-countdown-num').textContent = count;
+
+  const countdownInterval = setInterval(() => {
+    count--;
+    if (count > 0) {
+      document.getElementById('quiz-countdown-num').textContent = count;
+      document.getElementById('quiz-countdown-num').style.animation = 'none';
+      void document.getElementById('quiz-countdown-num').offsetHeight; // trigger reflow
+      document.getElementById('quiz-countdown-num').style.animation = 'quizPulse 0.6s ease';
+    } else if (count === 0) {
+      document.getElementById('quiz-countdown-num').textContent = 'GO!';
+      document.getElementById('quiz-countdown-num').style.animation = 'none';
+      void document.getElementById('quiz-countdown-num').offsetHeight;
+      document.getElementById('quiz-countdown-num').style.animation = 'quizPulse 0.6s ease';
+    } else {
+      clearInterval(countdownInterval);
+      show('screen-quiz');
+      showQuizWord();
+    }
+  }, 800);
+}
+
+function showQuizWord() {
+  if (quizIndex >= quizWords.length) {
+    showQuizResults();
+    return;
+  }
+
+  quizAnswered = false;
+  const word = quizWords[quizIndex];
+
+  // Update progress
+  document.getElementById('quiz-progress-label').textContent = `${quizIndex + 1} / ${quizWords.length}`;
+  const pct = (quizIndex / quizWords.length) * 100;
+  document.getElementById('quiz-progress-bar').style.width = pct + '%';
+
+  // Reset input
+  const input = document.getElementById('quiz-input');
+  input.value = '';
+  input.className = 'quiz-input';
+  input.disabled = false;
+  input.placeholder = 'Type the word...';
+  input.focus();
+
+  // Clear feedback & correction
+  document.getElementById('quiz-feedback').innerHTML = '';
+  document.getElementById('quiz-correction').style.display = 'none';
+  document.getElementById('quiz-hint').textContent = 'Listen to the word, then spell it!';
+
+  // Auto-play the word
+  setTimeout(() => sayWordForPractice(word.word), 300);
+}
+
+// Hear word again
+document.getElementById('quiz-hear').addEventListener('click', () => {
+  if (quizIndex < quizWords.length) {
+    sayWordForPractice(quizWords[quizIndex].word);
+  }
+});
+
+document.getElementById('btn-quiz-replay').addEventListener('click', () => {
+  if (quizIndex < quizWords.length) {
+    sayWordForPractice(quizWords[quizIndex].word);
+  }
+});
+
+// Submit answer
+document.getElementById('btn-quiz-submit').addEventListener('click', submitQuizAnswer);
+document.getElementById('quiz-input').addEventListener('keydown', (e) => {
+  if (e.key === 'Enter') submitQuizAnswer();
+});
+
+function submitQuizAnswer() {
+  if (quizAnswered) return;
+  const input = document.getElementById('quiz-input');
+  const typed = input.value.trim().toLowerCase();
+
+  if (!typed) {
+    // Shake the input if empty
+    input.style.animation = 'choiceShake 0.4s ease';
+    setTimeout(() => input.style.animation = '', 400);
+    return;
+  }
+
+  quizAnswered = true;
+  input.disabled = true;
+
+  const word = quizWords[quizIndex];
+  const isCorrect = typed === word.word.toLowerCase();
+
+  if (isCorrect) {
+    input.classList.add('correct');
+    document.getElementById('quiz-feedback').innerHTML =
+      '<div class="spell-practice-feedback-msg" style="color:var(--green);">✅ Correct!</div>';
+    quizResults.push({ word: word.word, typed, correct: true });
+  } else {
+    input.classList.add('wrong');
+    document.getElementById('quiz-correction').textContent = `Correct: ${word.word}`;
+    document.getElementById('quiz-correction').style.display = 'block';
+    document.getElementById('quiz-feedback').innerHTML =
+      `<div class="spell-practice-feedback-msg" style="color:var(--coral);">Not quite!</div>`;
+    quizResults.push({ word: word.word, typed, correct: false });
+  }
+
+  // Save practice data
+  const d = getData();
+  const savedList = d.spellingLists.find(l => l.id === currentSpellingList.id);
+  if (savedList) {
+    const savedWord = savedList.words.find(sw => sw.word === word.word);
+    if (savedWord) {
+      savedWord.practiced = (savedWord.practiced || 0) + 1;
+      if (isCorrect) savedWord.mastered = true;
+    }
+    saveData(d);
+  }
+
+  setTimeout(() => {
+    quizIndex++;
+    showQuizWord();
+  }, isCorrect ? 1200 : 2500);
+}
+
+function showQuizResults() {
+  const correct = quizResults.filter(r => r.correct).length;
+  const total = quizResults.length;
+  const pct = Math.round((correct / total) * 100);
+
+  document.getElementById('quiz-results-score').textContent = `${correct}/${total}`;
+  document.getElementById('quiz-progress-bar').style.width = '100%';
+
+  // Stars
+  let stars = '';
+  if (pct === 100) { stars = '⭐⭐⭐'; }
+  else if (pct >= 80) { stars = '⭐⭐'; }
+  else if (pct >= 50) { stars = '⭐'; }
+  else { stars = '💪'; }
+  document.getElementById('quiz-results-stars').textContent = stars;
+
+  // Title
+  if (pct === 100) {
+    document.getElementById('quiz-results-title').textContent = '🎉 Perfect Score!';
+  } else if (pct >= 80) {
+    document.getElementById('quiz-results-title').textContent = '🌟 Great Job!';
+  } else if (pct >= 50) {
+    document.getElementById('quiz-results-title').textContent = '👍 Good Effort!';
+  } else {
+    document.getElementById('quiz-results-title').textContent = '💪 Keep Studying!';
+  }
+
+  // Result list with what they typed vs correct
+  const listEl = document.getElementById('quiz-results-list');
+  listEl.innerHTML = quizResults.map(r => `
+    <div class="spell-result-item ${r.correct ? 'got-right' : 'got-wrong'}">
+      <span>${r.correct ? '✅' : '❌'}</span>
+      <span style="flex:1;">${r.word}</span>
+      ${!r.correct ? `<span style="font-size:0.8rem;opacity:0.7;">wrote: ${r.typed}</span>` : ''}
+    </div>
+  `).join('');
+
+  // Retry missed
+  const missed = quizResults.filter(r => !r.correct);
+  const retryBtn = document.getElementById('btn-quiz-retry-missed');
+  if (missed.length > 0 && missed.length < total) {
+    retryBtn.style.display = 'block';
+    retryBtn.textContent = `🔄 Retry ${missed.length} Missed Word${missed.length > 1 ? 's' : ''}`;
+  } else {
+    retryBtn.style.display = 'none';
+  }
+
+  show('screen-quiz-results');
+}
+
+// Quiz results buttons
+document.getElementById('btn-quiz-retry-missed').addEventListener('click', () => {
+  const missedWords = quizResults.filter(r => !r.correct).map(r => r.word);
+  const missedObjs = currentSpellingList.words.filter(w => missedWords.includes(w.word));
+  startSpellingQuiz(missedObjs);
+});
+
+document.getElementById('btn-quiz-retry-all').addEventListener('click', () => {
+  const selectedWords = spellingPickedWords.map(i => currentSpellingList.words[i]);
+  startSpellingQuiz(selectedWords);
+});
+
+document.getElementById('btn-quiz-results-done').addEventListener('click', () => {
+  show('screen-spelling');
   if (currentSpellingList) renderSpellingWords(currentSpellingList);
 });
 
