Fix picker layout and voice button highlight bug

--- a/index.html
+++ b/index.html
@@ -918,8 +918,8 @@ body.bedtime .wpm-improvement { background: #1a3a2a; border-color: #4a8a5a; colo
         <button class="spell-select-all" id="btn-spell-select-all" style="margin:0;font-size:0.8rem;padding:6px 14px;">Select All</button>
         <div style="display:flex;align-items:center;gap:6px;">
           <span style="font-weight:800;font-size:0.72rem;color:var(--muted);text-transform:uppercase;letter-spacing:1px;">Voice:</span>
-          <button class="opt-btn spell-voice-btn" data-voice="female" id="spell-voice-female" style="padding:5px 12px;min-width:auto;font-size:0.82rem;margin:0;">👩 Woman</button>
-          <button class="opt-btn spell-voice-btn" data-voice="male" id="spell-voice-male" style="padding:5px 12px;min-width:auto;font-size:0.82rem;margin:0;">👨 Man</button>
+          <button class="opt-btn spell-voice-btn" data-voice="female" id="spell-voice-female" style="padding:5px 12px;min-width:auto;font-size:0.82rem;margin:0;white-space:nowrap;">👩 Woman</button>
+          <button class="opt-btn spell-voice-btn" data-voice="male" id="spell-voice-male" style="padding:5px 12px;min-width:auto;font-size:0.82rem;margin:0;white-space:nowrap;">👨 Man</button>
         </div>
       </div>
       <div id="spell-picker-list" style="max-height:45vh;overflow-y:auto;overscroll-behavior:contain;"></div>
