--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ body.bedtime .quiz-input.wrong { background: #3a1a1a; border-color: #8a4a4a; col
 body.bedtime .quiz-correction { color: #8adca0; }
 
 /* ── Dictionary Popup ── */
-.dict-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 200; display: flex; align-items: flex-end; justify-content: center; animation: fadeIn 0.2s ease; }
+.dict-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 300; display: flex; align-items: flex-end; justify-content: center; animation: fadeIn 0.2s ease; }
 @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 .dict-popup { width: 100%; max-width: 500px; background: var(--card); border-radius: 24px 24px 0 0; padding: 24px 20px 30px; box-shadow: 0 -4px 30px rgba(74,26,107,0.2); animation: slideUp 0.3s cubic-bezier(0.34,1.56,0.64,1); }
 @keyframes slideUp { from { transform: translateY(100%); } to { transform: translateY(0); } }
@@ -522,8 +522,8 @@ body.bedtime .wpm-improvement { background: #1a3a2a; border-color: #4a8a5a; colo
 .reading-mode-text { font-size: 1.6rem; line-height: 2.8rem; color: var(--ink); font-weight: 700; font-family: 'Nunito', sans-serif; }
 .reading-mode-text .word-span { cursor: pointer; border-radius: 4px; padding: 2px 1px; transition: background 0.15s; }
 .reading-mode-text .word-span:hover { background: var(--purple-soft); }
-.reading-mode-text .word-span.active-word { background: var(--purple-soft); color: var(--purple-deep); }
-.reading-mode-fab { position: fixed; bottom: 20px; right: 20px; z-index: 201; display: flex; gap: 10px; }
+.reading-mode-text .word-span.active-word { background: var(--gold); color: var(--ink); border-radius: 4px; transform: scale(1.05); display: inline-block; box-shadow: 0 2px 8px rgba(255,180,0,0.4); }
+.reading-mode-fab { position: fixed; top: 16px; left: 16px; z-index: 201; display: flex; gap: 10px; }
 .reading-mode-fab button { padding: 12px 18px; border-radius: 50px; border: none; font-family: 'Nunito', sans-serif; font-weight: 800; font-size: 0.88rem; cursor: pointer; box-shadow: 0 4px 16px rgba(0,0,0,0.15); transition: all 0.2s; }
 .reading-mode-fab button:hover { transform: scale(1.05); }
 .btn-rm-close { background: var(--card); color: var(--muted); border: 2px solid var(--border) !important; }
@@ -533,9 +533,18 @@ body.bedtime .reading-mode-overlay { background: #1a1a2e; }
 body.bedtime .reading-mode-title { color: #c090e0; }
 body.bedtime .reading-mode-text { color: #F0EBE0; }
 body.bedtime .reading-mode-text .word-span:hover { background: #2a1a4a; }
-body.bedtime .reading-mode-text .word-span.active-word { background: #2a1a4a; color: #c090e0; }
+body.bedtime .reading-mode-text .word-span.active-word { background: #B8860B; color: #F0EBE0; box-shadow: 0 2px 8px rgba(184,134,11,0.4); }
 body.bedtime .btn-rm-close { background: #252540; border-color: #3a3a5c !important; color: #a080c0; }
 body.bedtime .btn-rm-listen { background: #7a4aaa; }
+
+/* ── Floating Play/Pause Button (both modes) ── */
+.float-tts-btn { position: fixed; bottom: 24px; left: 50%; transform: translateX(-50%); z-index: 250; padding: 14px 28px; border-radius: 50px; border: none; font-family: 'Fredoka', sans-serif; font-weight: 700; font-size: 1.1rem; cursor: pointer; box-shadow: 0 4px 20px rgba(155,48,255,0.35); transition: all 0.2s; display: none; }
+.float-tts-btn:active { transform: translateX(-50%) scale(0.95); }
+.float-tts-btn.playing { background: var(--coral); color: #fff; }
+.float-tts-btn.paused { background: var(--green); color: #fff; }
+.float-tts-btn.loading { background: var(--muted); color: #fff; pointer-events: none; }
+body.bedtime .float-tts-btn.playing { background: #8a4a4a; }
+body.bedtime .float-tts-btn.paused { background: #4a8a5a; }
 
 @media (max-width: 480px) {
   .logo { font-size: 2.2rem; }
@@ -1503,6 +1512,16 @@ function startHighlightLoop() {
           }
         }
       }
+      // Also highlight in reading mode if active
+      const rmOverlay = document.getElementById('reading-mode-overlay');
+      if (rmOverlay && rmOverlay.classList.contains('active')) {
+        const rmWords = rmOverlay.querySelectorAll('#rm-text .word-span');
+        rmWords.forEach(w => w.classList.remove('active-word'));
+        if (rmWords[activeIdx]) {
+          rmWords[activeIdx].classList.add('active-word');
+          rmWords[activeIdx].scrollIntoView({ behavior: 'smooth', block: 'center' });
+        }
+      }
       const pct = Math.round((activeIdx + 1) / S.wordEls.length * 100);
       document.getElementById('progress-bar').style.width = pct + '%';
       if (S.isRace) {
@@ -1519,6 +1538,8 @@ function stopTTS() {
   stopRAF();
   if (ttsAudio) { ttsAudio.pause(); ttsAudio.src = ''; ttsAudio = null; }
   S.wordEls.forEach(w => w.classList.remove('highlight'));
+  // Clear reading mode highlights too
+  document.querySelectorAll('#rm-text .word-span').forEach(w => w.classList.remove('active-word'));
   resetTTSButtons();
   ttsPausedAtMs = 0;
 }
@@ -4118,14 +4139,28 @@ document.getElementById('btn-rm-close').addEventListener('click', closeReadingMo
 function closeReadingMode() {
   readingOverlay.classList.remove('active');
   document.body.style.overflow = '';
+  document.getElementById('btn-rm-listen').textContent = '🔊 Listen';
+  // Clear reading mode highlights
+  document.querySelectorAll('#rm-text .word-span').forEach(w => w.classList.remove('active-word'));
 }
 
-// Listen button in reading mode — triggers TTS play
+// Listen button in reading mode — toggles TTS play/pause
 document.getElementById('btn-rm-listen').addEventListener('click', () => {
-  // Use the existing play button logic
-  const playBtn = document.getElementById('btn-play');
-  if (playBtn && !playBtn.disabled) {
-    playBtn.click();
+  if (ttsState === 'playing') {
+    // Already playing, pause it
+    const pauseBtn = document.getElementById('btn-pause');
+    if (pauseBtn && !pauseBtn.disabled) pauseBtn.click();
+    document.getElementById('btn-rm-listen').textContent = '🔊 Listen';
+  } else if (ttsState === 'paused') {
+    // Resume
+    const playBtn = document.getElementById('btn-play');
+    if (playBtn) playBtn.click();
+    document.getElementById('btn-rm-listen').textContent = '⏸ Pause';
+  } else {
+    // Not playing, start
+    const playBtn = document.getElementById('btn-play');
+    if (playBtn && !playBtn.disabled) playBtn.click();
+    document.getElementById('btn-rm-listen').textContent = '⏸ Pause';
   }
 });
 
@@ -4135,6 +4170,53 @@ document.addEventListener('keydown', (e) => {
     closeReadingMode();
   }
 });
+
+// ── Floating Play/Pause Button (works in both modes) ────
+const floatTTSBtn = document.createElement('button');
+floatTTSBtn.className = 'float-tts-btn';
+floatTTSBtn.id = 'float-tts-btn';
+floatTTSBtn.textContent = '⏸ Pause';
+document.body.appendChild(floatTTSBtn);
+
+floatTTSBtn.addEventListener('click', () => {
+  if (ttsState === 'playing') {
+    const pauseBtn = document.getElementById('btn-pause');
+    if (pauseBtn && !pauseBtn.disabled) pauseBtn.click();
+  } else if (ttsState === 'paused') {
+    const playBtn = document.getElementById('btn-play');
+    if (playBtn) playBtn.click();
+  }
+});
+
+// Poll TTS state to show/hide and update the floating button
+let lastFloatState = '';
+setInterval(() => {
+  const isReadScreen = document.getElementById('screen-read')?.classList.contains('active');
+  const isReadingMode = readingOverlay.classList.contains('active');
+  const shouldShow = (isReadScreen || isReadingMode) && (ttsState === 'playing' || ttsState === 'paused');
+
+  if (shouldShow) {
+    floatTTSBtn.style.display = 'block';
+    if (ttsState !== lastFloatState) {
+      lastFloatState = ttsState;
+      if (ttsState === 'playing') {
+        floatTTSBtn.textContent = '⏸ Pause';
+        floatTTSBtn.className = 'float-tts-btn playing';
+        // Also sync reading mode button
+        const rmBtn = document.getElementById('btn-rm-listen');
+        if (rmBtn) rmBtn.textContent = '⏸ Pause';
+      } else if (ttsState === 'paused') {
+        floatTTSBtn.textContent = '▶ Play';
+        floatTTSBtn.className = 'float-tts-btn paused';
+        const rmBtn = document.getElementById('btn-rm-listen');
+        if (rmBtn) rmBtn.textContent = '🔊 Listen';
+      }
+    }
+  } else {
+    floatTTSBtn.style.display = 'none';
+    lastFloatState = '';
+  }
+}, 200);
 
 </script>
 </body>
